[package]
name = "rust-sk"
version = "0.1.0"
edition = "2021"
authors = [
    "Arkitu"    
]
license = "MIT"
description = "A port of the rsk (robot-soccer-kit) python library"
homepage = "https://github.com/Undefined-club-robotique/rust-sk"
repository = "https://github.com/Undefined-club-robotique/rust-sk"
documentation = "https://github.com/Undefined-club-robotique/rust-sk"
readme = "README.md"
keywords = ["rsk", "robot", "soccer", "kit", "robocup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }